Fixed sources overflow on small screens

--- a/player/style.css
+++ b/player/style.css
@@ -72,7 +72,7 @@ a:focus {
 	gap: 1rem;
 	width: 100%;
 	height: fit-content;
-	min-height: 512px;
+	min-height: 420px;
 	max-width: 722px; /* 720px + left & right borders */
 	filter: drop-shadow(0 0 16px var(--color-bg));
 	transition: opacity 0.3s ease;
@@ -182,9 +182,13 @@ a:focus {
 
 #sources {
 	overflow-x: auto;
+	max-width: 100%;
 	padding: 0 0.25rem;
 	border-top: 1px solid var(--color-border);
-	justify-content: flex-end;
+}
+
+#sources :first-child {
+	margin-left: auto;
 }
 
 #footer {
@@ -315,7 +319,7 @@ a:focus {
 
 /* Responsive media queries Styles -------------------------------- */
 
-@media screen and (max-width: 800px), screen and (max-height: 800px) {
+@media screen and (max-width: 800px), screen and (max-height: 600px) {
 	:root {
 		font-size: 13px;
 	}
